# paws

./: .gitignore  LICENSE  README.md  main.py  manual_test.aol  pyproject.toml
.agent/rules/: tooling.md
docs/: PAWS Core Architecture_ The Planner and Executor Framework.md  PAWS Three levels of automation with generative AI.md
docs/designs/: PAWS Core Architecture_ The Planner and Executor Framework.md  PAWS Phase 1 Technical Design_ Core Execution and Extension Architecture.md  PAWS Three levels of automation with generative AI.md
docs/designs/AOL/: # PAWS AOL Example.md  # Python Executor Architecture for PAWS and ACI Workflow.md  # The Architecture and Logic of Autonomous Operator Language.md  AOL Specification.md  PAWS AOL Example.md  Python Executor Architecture for PAWS and ACI Workflow.md  The Architecture and Logic of Autonomous Operator Language.md  __init__.py
docs/designs/Overview/: PAWS Phase 1 Technical Design_ Core Execution and Extension Architecture.md  PAWS Technical Design for Level 3 Autonomous Operators.md
docs/plans/: paws_poc_implementation_plan.md
paws/: __init__.py  aol_parser.py  executor.py  mcp_client.py  planner.py  security.py  state_manager.py  validator.py
paws/core/: models.py  registry.py
paws/extensions/: bash.py
tests/: conftest.py  test_aol_parser.py  test_core_models.py  test_core_registry.py  test_executor.py  test_extensions_bash.py  test_extensions_bash_extra.py  test_planner.py  test_security.py  test_state_manager.py
