[project]
name = "paws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.59.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["paws", "paws.core", "paws.extensions", "paws.aol_spec"]

[tool.setuptools.package-dir]
"paws.aol_spec" = "docs/designs/AOL"

[tool.setuptools.package-data]
"paws.aol_spec" = ["AOL Specification.md"]

